--- a/count-days-core/pom.xml
+++ b/count-days-core/pom.xml
@@ -4,21 +4,18 @@
 	<parent>
 		<groupId>com.pache</groupId>
 		<artifactId>weabroad</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>${parent.version}</version>
 	</parent>
 
-	<artifactId>count-days</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>count-days-core</artifactId>
 	<packaging>jar</packaging>
 
 	<name>Count Days</name>
-	<url>https://github.com/leonardopache/count-days-core.git</url>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.pache</groupId>
 			<artifactId>send-mail-api</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>joda-time</groupId>
@@ -70,4 +67,5 @@
 		</pluginManagement>
 	</build>
 
+	<groupId>com.pache</groupId>
 </project>
