--- a/rest-jaxrs/pom.xml
+++ b/rest-jaxrs/pom.xml
@@ -4,16 +4,21 @@
 	<parent>
 		<groupId>com.pache</groupId>
 		<artifactId>weabroad</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>${parent.version}</version>
 	</parent>
 
 	<artifactId>rest-jaxrs</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<name>REST Jax-RS</name>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.pache</groupId>
+			<artifactId>job-days-quartz</artifactId>
+		</dependency>
+	
+		<!-- Servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
