--- a/send-mail-api/pom.xml
+++ b/send-mail-api/pom.xml
@@ -4,15 +4,13 @@
 	<parent>
 		<groupId>com.pache</groupId>
 		<artifactId>weabroad</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>${parent.version}</version>
 	</parent>
 	
 	<artifactId>send-mail-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
 	<name>Send Mail API</name>
-	<url>https://github.com/leonardopache/send-mail-api.git</url>
 	
 	<dependencies>
 		<dependency>
