--- a/rest-jaxrs/src/main/webapp/WEB-INF/web.xml
+++ b/rest-jaxrs/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	version="3.1">
+	version="3.1" metadata-complete="false">
 
 	<display-name>REST-Jax-RS</display-name>
 	
