--- a/send-mail-api/pom.xml
+++ b/send-mail-api/pom.xml
@@ -6,12 +6,12 @@
 		<artifactId>weabroad</artifactId>
 		<version>${parent.version}</version>
 	</parent>
-	
+
 	<artifactId>send-mail-api</artifactId>
 	<packaging>jar</packaging>
-	
+
 	<name>Send Mail API</name>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -52,6 +52,14 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>2.0.2-beta</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
