--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jdk.version>1.8</jdk.version>
-		<parent.version>1.0-SNAPSHOT</parent.version>
+		<parent.version>1.0</parent.version>
 	</properties>
 
 	<dependencyManagement>
