--- a/aniversary-app/pom.xml
+++ b/aniversary-app/pom.xml
@@ -1,21 +1,40 @@
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.pache</groupId>
-    <artifactId>weabroad</artifactId>
-    <version>${parent.version}</version>
-  </parent>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.pache</groupId>
+		<artifactId>weabroad</artifactId>
+		<version>${parent.version}</version>
+	</parent>
 
-  <artifactId>aniversary-app</artifactId>
-  <name>aniversary-app</name>
+	<artifactId>aniversary-app</artifactId>
+	<packaging>jar</packaging>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<name>Aniversary Application</name>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.pache</groupId>
+			<artifactId>count-days-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.pache</groupId>
+			<artifactId>send-mail-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.pache</groupId>
+			<artifactId>job-days-quartz</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
